fix note layout on visible action button

--- a/css/global.css
+++ b/css/global.css
@@ -44,12 +44,16 @@ body,
   margin: 50px;
 }
 
-.pad.-bottom {
-  margin: 0 0 50px 0;
+.pad--top {
+  margin: 60px 0 20px 0;
 }
 
-.pad.-vertical {
-  margin: 75px 20px 30px 20px;
+.pad--bottom {
+  margin: 20px 0 60px 0;
+}
+
+.pad--vertical {
+  margin: 60px 20px;
 }
 
 .footer-pad {
